--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -3,7 +3,7 @@
   "name": "Tab gatherer",
   "short_name": "Tab gatherer",
   "version": "1.0.0",
-  "permissions": ["tabs"],
+  "permissions": ["tabs", "tabGroups"],
   "description": "Chrome extension to group tabs automatically based on their domain and your current tabs",
   "author": "a.michurin@gmail.com",
   "homepage_url": "https://github.com/michurin/chrome-extension-tab-gatherer",
