Manifest: version, description

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -2,9 +2,9 @@
   "manifest_version": 3,
   "name": "Tab gatherer",
   "short_name": "Tab gatherer",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "permissions": ["tabs", "tabGroups"],
-  "description": "Chrome extension to group tabs automatically based on their domain and your current tabs",
+  "description": "The Google Chrome extension groups tabs automatically. Groups are based on tabs domain names.",
   "author": "a.michurin@gmail.com",
   "homepage_url": "https://github.com/michurin/chrome-extension-tab-gatherer",
   "minimum_chrome_version": "88",
